# subnet_check

./: .gitignore  Cargo.toml  readme.md
bash/: subnetCheckv1.sh
c/: Makefile  subnet_check.c
go/: subnet_check.go
python/: subnet_check.py
rust/: .gitignore  Cargo.toml  readme.md
rust/src/: get_interface_addr.rs  get_resolver.rs  subnetcheck.rs
src/: subnetcheck.rs
