[package]
name = "subnetcheck"
version = "0.1.0"
edition = "2021"
authors = ["Adam Fitzgerald"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnet = "2.9.0"
ipnetwork = "*"
dns-lookup = "*"
local-ip-address = "*"

[[bin]]
name = "subnetcheck"
path = "src/subnetcheck.rs"
