[package]
name = "subnetcheck"
version = "0.1.0"
edition = "2021"
authors = ["Adam Fitzgerald"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnet = "2.9.0"
ipnetwork = "*"
dns-lookup = "*"
local-ip-address = "*"
resolv-conf = "*"

[[bin]]
name = "subnetcheck"
path = "src/subnetcheck.rs"

[[bin]]
name = "get_resolver"
path = "src/get_resolver.rs"

[[bin]]
name = "get_interface_addr"
path = "src/get_interface_addr.rs"
